# rocketsim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STYLE.md
.cache/clangd/index/: main.c.2E29139A80D50058.idx  main.c.5D03F3A602FFD8A2.idx  main.c.7978D661CCA2F165.idx  main.c.FC1565CDF9C234CB.idx
docs/: 0-prologue.md  1-c.md  2-architecture.md  3-hello-triangle-and-ipc.md  3-opengl-shm.md  3-opengl.md  4-vis-upgrade.md  checklist.md
media/: 3-ipc.mov  3-motion-ipc.mov
src/: rsm.c  rsm.h  scene_frame.h
src/controller/: main.c
src/launcher/: main.c
src/simulator/: main.c
src/visualizer/: main.c
src/visualizer/objects/: shapes.c  shapes.h  triangle.c  triangle.h  vobject.c  vobject.h
